# onnxruntime-qnx

./: LICENSE  README.md  boost_cfg_1.71.0_qnx700.jam  boost_cfg_1.80.0_qnx710.jam  build_qnx.sh  onnx_1.14.1_qnx710_aarch64le.cmake  onnx_1.8.2_qnx700_aarch64le.cmake
onnxruntime_1.14.1_patch/cmake/: CMakeLists.txt  onnxruntime.cmake  onnxruntime_providers.cmake  onnxruntime_unittests.cmake
onnxruntime_1.14.1_patch/cmake/patches/composable_kernel/: Fix_Clang_Build.patch
onnxruntime_1.14.1_patch/cmake/patches/flatbuffers/: flatbuffers_cross.patch
onnxruntime_1.14.1_patch/cmake/patches/protobuf/: protobuf_cmake.patch
onnxruntime_1.14.1_patch/onnxruntime/core/common/: threadpool.cc
onnxruntime_1.14.1_patch/onnxruntime/core/common/logging/: logging.cc
onnxruntime_1.14.1_patch/onnxruntime/core/platform/: path_lib.h
onnxruntime_1.14.1_patch/onnxruntime/core/platform/posix/: env.cc  stacktrace.cc
onnxruntime_1.8.2_patch/cmake/: CMakeLists.txt  onnxruntime.cmake  onnxruntime_mlas.cmake  onnxruntime_providers.cmake  onnxruntime_python.cmake  onnxruntime_unittests.cmake
onnxruntime_1.8.2_patch/include/onnxruntime/core/framework/: endian.h
onnxruntime_1.8.2_patch/onnxruntime/core/common/: threadpool.cc
onnxruntime_1.8.2_patch/onnxruntime/core/common/logging/: logging.cc
onnxruntime_1.8.2_patch/onnxruntime/core/platform/: path_lib.h
onnxruntime_1.8.2_patch/onnxruntime/core/platform/posix/: env.cc  stacktrace.cc
onnxruntime_1.8.2_patch/samples/c_cxx/imagenet/: local_filesystem.h
(+3 files in other folders)
